# ROS-2-Dynamics-Controller-for-Lightweight-6-Axis-Robotic-Arms

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  Theory.md  run_docker.sh
mujoco-3.9.0/: THIRD_PARTY_NOTICES
mujoco-3.9.0/wasm/: mujoco.js  mujoco.wasm.map  mujoco_wasm_benchmark.js  mujoco_wasm_benchmark.wasm.map
mujoco-3.9.0/wasm/mt/: mujoco.d.ts  mujoco.js  mujoco.wasm.map  mujoco_wasm_benchmark.js  mujoco_wasm_benchmark.wasm.map
src/lite6_bringup/: CMakeLists.txt  package.xml
src/lite6_bringup/launch/: system_bringup.launch.py
src/lite6_controllers/: CMakeLists.txt  lite6_controllers.xml  package.xml
src/lite6_controllers/include/lite6_controllers/: ctc_controller.hpp
src/lite6_controllers/src/: ctc_controller.cpp
src/lite6_description/: CMakeLists.txt  package.xml
src/lite6_description/mujoco/: lite6.xml
src/lite6_description/rviz/: clean.rviz
src/lite6_description/urdf/: lite6.urdf
src/lite6_hardware/: CMakeLists.txt  lite6_hardware.xml  package.xml
src/lite6_hardware/config/: ros2_controllers.yaml
src/lite6_hardware/include/lite6_hardware/: lite6_mujoco_system.hpp
src/lite6_hardware/src/: lite6_mujoco_system.cpp
src/lite6_hmi/: package.xml  setup.cfg  setup.py
src/lite6_hmi/lite6_hmi/: gui_main.py  shadow_tracker.py  sysid_engine.py
src/lite6_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/lite6_moveit_config/config/: cartesian_limits.yaml  joint_limits.yaml  kinematics.yaml  lite6.ros2_control.xacro  lite6.srdf  lite6.urdf.xacro  moveit_controllers.yaml  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner_planning.yaml  ros2_controllers.yaml
src/lite6_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
